FPVTL-2249 incorporating lint advice and code review on custom exception